# selllite_vB

./: .env.example  Dockerfile  README.md  package.json  render.yaml
backend/: Dockerfile  pyproject.toml  seed_admin.py
backend/alembic/: README  env.py  script.py.mako
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: auth_routes.py  billing_routes.py  project_routes.py  user_routes.py
backend/tests/: test_auth.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  api.js  auth.js  main.jsx  styles.css
frontend/src/pages/: AdminPanel.jsx  Billing.jsx  Dashboard.jsx  Login.jsx  Register.jsx
public/: cart.html  checkout-cancel.html  checkout-success.html  index.html  login.html  product.html  products.html  register.html
public/admin/: dashboard.html  index.html  login.html  orders.html  products.html
public/assets/: admin.js  app.js  styles.css
public/assets/css/: style.css
selllite_vB/: README.md
selllite_vB/public/: checkout-cancel.html
selllite_vB/public/admin/: index.html  login.html  products.html  settings.html
selllite_vB/public/assets/css/: style.css
selllite_vB/public/assets/js/: main.js
selllite_vB/server/: auth.js  index.js
selllite_vB/server/routes/: public.js
server/: auth.js  createAdmin.js  db.js  index.js  seed.js
server/migrations/: init.sql
server/routes/: admin.js  cart.js  payments.js  products.js  public.js  userAuth.js
